2004-01-24  bryce <brycehar@bryceharrington.com>
	* src/dialogs/stroke-style.cpp:  Hooking up marker buttons to
	underlying marker style setting code, & etc.  

2004-01-24  bulia byak <bulia@users.sourceforge.net>

	* src/document.cpp src/sp-namedview.cpp: Desensitize undo for changing document uri
	and for saving window geometry/viewarea into namedview

	* src/xml/repr-util.cpp: Increase precision in set_double_attr
 
	* src/arc-context.cpp: Call invoke_write when finishing arc, instead of setting attrs
	manually
 
	* src/sp-ellipse.cpp: Add write method to genericellipse; fix handling of start and
	end attrs; fix undo bug (877238)

2004-01-24  MenTaLguY <mental@rydia.net>

	* src/xml/repr-action.h, src/xml/repr-action.c: made the
	SPReprAction::act union anonymous, and reworked the transaction
	log optimization code.  sp_repr_coalesce_log() should be a bit
	faster now, and no more strcmp()s.

2004-01-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/livarot/Path.h, src/livarot/Path.cpp (Path::Affiche): remove
	unused function.
	Doing so allows removal of path_descr_moveto::pathLength field and the
	code for calculating its value.

	* src/livarot/Path.cpp (SizeForData): Change from private method to
	  static function.
	  Use new function roundup_div instead of `%' calculation.

	  (Path::CloseSubpath): Remove loop that calculated pathLength.
	  Consequently remove the no-longer-used argument.  Update callers.

	  (Path::MoveTo, Path::LineTo, Path::CubicTo, Path::ArcTo,
	  Path::TempBezierTo, Path::EndBezierTo, Path::IntermBezierTo,
	  Path::BezierTo, Path::AddPoint, Path::PointAt,
	  Path::PointAndTangentAt):
	  Change some C-style casts to reinterpret_cast's.

	  (Path::PointAt, Path::PointAndTangentAt): code transformations
	  in preparation for merging some branches.

	* src/libnr/nr-types-test.cpp (main): Update for NR::Point .pt
	privateness change.

	* src/libnr/nr-svp-uncross.cpp (nr_segment_intersection): Mark some