@@ -1,4 +1,10 @@
+2004-01-25 MenTaLguY <mental@rydia.net>
+
+	* src/sp-object-repr.cpp, src/splivarot.cpp, src/sp-offset.cpp:
+	changed "offset" to "inkscape:offset" for sodipodi:type
+
 2004-01-24  bryce <brycehar@bryceharrington.com>
+
 	* src/dialogs/stroke-style.cpp:  Hooking up marker buttons to
 	underlying marker style setting code, & etc.  
 
